2009-08-18  Marek Safar  <marek.safar@gmail.com>

	* *.cs: Removed boolean fields from EmitContext.

2009-08-18  Marek Safar  <marek.safar@gmail.com>

	* *.cs: Add IResolveContext::IsStatic.

2009-08-18  Marek Safar  <marek.safar@gmail.com>

	* *.cs: Moved TopBlock's methods from EmitContext to TopBlock.

2009-08-17  Marek Safar  <marek.safar@gmail.com>

	* *.cs: Removed DeclContainer from EmitContext.

2009-08-17  Marek Safar  <marek.safar@gmail.com>

	* *.cs: Add IResolveContext::CurrentTypeParameters.

2009-08-14  Marek Safar  <marek.safar@gmail.com>

	* *.cs: Removed TypeContainer and ContainerType from EmitContext.

2009-08-14  Marek Safar  <marek.safar@gmail.com>

	* decl.cs, expression.cs, namespace.cs, ecore.cs, class.cs,
	codegen.cs: Add IResolveContext::LookupExtensionMethod.

2009-08-13  Marek Safar  <marek.safar@gmail.com>

	* decl.cs: Look in PartialContainer for parent type parameters.

2009-08-13  Marek Safar  <marek.safar@gmail.com>

	* decl.cs, namespace.cs, ecore.cs, class.cs, attribute.cs,
	codegen.cs: Add IResolveContext::LookupTypeParameter.

2009-08-13  Marek Safar  <marek.safar@gmail.com>

	* lambda.cs, expression.cs, statement.cs, namespace.cs, ecore.cs:
	Moved resolved logic from Emit to Resolve.

2009-08-13  Marek Safar  <marek.safar@gmail.com>

	* parameter.cs, decl.cs, roottypes.cs, class.cs, attribute.cs,
	codegen.cs: Reworked atttributes handling of ResolveContext.

2009-08-12  Marek Safar  <marek.safar@gmail.com>

	* decl.cs, ecore.cs, class.cs, attribute.cs, codegen.cs: Pushed
	LookupNamespaceOrType to ResolveContext.

2009-08-12  Marek Safar  <marek.safar@gmail.com>

	* typemanager.cs, decl.cs, expression.cs, namespace.cs, ecore.cs,
	class.cs: Removed unused parameters and methods.

2009-08-11  Marek Safar  <marek.safar@gmail.com>

	* generic.cs, lambda.cs, anonymous.cs, statement.cs, generic-mcs.cs,
	codegen.cs: Finding the best common type of a set of expressions for
	lambda statements.
